Fixed opportunities header text sizing on mobile.

--- a/src/pages/GetInvolved/GetInvolved.scss
+++ b/src/pages/GetInvolved/GetInvolved.scss
@@ -58,3 +58,9 @@
         }
     }
 }
+
+@media screen and (max-width: 480px) {
+    .largeItalicCenter {
+        font-size: 2rem !important;
+    }
+}
